Add a display name, oAuth fallback and rename file to client.js

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,6 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.12.0/moment.js"></script>
     <script src="//unpkg.com/@feathersjs/client@^4.3.0-pre.3/dist/feathers.js"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="app.js"></script>
+    <script src="client.js"></script>
   </body>
 </html>
